Changed up to fit mine

--- a/gfs-marschall/titlepage.sty
+++ b/gfs-marschall/titlepage.sty
@@ -294,8 +294,8 @@
          }%
          {
          \fontsize{10}{12}\selectfont%
-           Hildastraße 31,\\
-           68723 Oftersheim%
+           Hauptstraße 60,\\
+           68804 Altlußheim%
          }%
          {
          %\ifx\@icoauthor\@empty\else%
