--- a/gfs-marschall/ling-relativ-prinzip.bib
+++ b/gfs-marschall/ling-relativ-prinzip.bib
@@ -1,38 +1,8 @@
 
 @misc{wiki:Sapir-Whorf-Hypothese,
 	author = "Wikipedia",
-	title = "{Sapir-Whorf-Hypothese} --- {W}ikipedia{,} The Free Encyclopedia",
+	title = "{Verrückter Wissenschaftler} --- {W}ikipedia{,} The Free Encyclopedia",
 	year = "2023",
-	howpublished = {\url{http://de.wikipedia.org/w/index.php?title=Sapir-Whorf-Hypothese&oldid=234438742}},
-	note = "[Online; aufgerufen 30. Oktober 2023]"
-}
-@misc{wiki:Benjamin_Lee_Whorf,
-	author = "Wikipedia",
-	title = "{Benjamin Lee Whorf} --- {W}ikipedia{,} The Free Encyclopedia",
-	year = "2023",
-	howpublished = {\url{http://de.wikipedia.org/w/index.php?title=Benjamin\%20Lee\%20Whorf&oldid=235528111}},
+	howpublished = {\url{https://de.wikipedia.org/wiki/Verr%C3%BCckter_Wissenschaftler}},
 	note = "[Online; aufgerufen 31. Oktober 2023]"
-}
-@article{article:Science_and_linguistics,
-	author = "Benjamin Whorf",
-	title = "Science and linguistics",
-	journal = "John B. Carroll (Hrsg.): Language, Thought, and Reality. Selected Writings of Benjamin Lee Whorf.",
-	year = 1956,
-	pages = "213",
-}
-@article{article:Linguistic_Relativity,
-	author = "Guy Deutscher",
-	title = "Does Your Language Shape How You Think?",
-	journal = "The New York Times Magazine",
-	year = 2010,
-}
-@misc{cartoon:Inuit,
-	author = "Dave Coverly",
-	title = "Did you know that suburban white males have over 100 words for \enquote{lawn}",
-	year = 2009,
-	howpublished = {\url{https://www.speedbump.com/}},
-}
-@misc{image:B_L_Whorf,
-	author = "Yale",
-	howpublished = {\url{https://ling.yale.edu/sites/default/files/images/whorf.jpg}},
 }
