--- a/gfs-marschall/ling-relativ-prinzip.tex
+++ b/gfs-marschall/ling-relativ-prinzip.tex
@@ -98,9 +98,9 @@
 
 % Make titlepage ************************
 \usepackage{titlepage}
-	\ititle{Das linguistische Relativitätsprinzip}
-	\isubtitle{Sapir-Whorf-Hypothese} % Optional
-	\iauthor{Jasper Gude}
+	\ititle{Wissenschaftler in der Literatur}
+	\isubtitle{Im Vergleich: Wissenschaftler der deutschen Geschichte mit der heutigen Darstellung} % Optional
+	\iauthor{Tom Schöchle}
 	\idate{\today}
 	\irefnr{}
 	\iaddress{Hockenheim} % Only for ireports!
@@ -118,7 +118,7 @@ anderen Werken wörtlich oder sinngemäß entnommenen Stellen unter Angabe der
 Quelle als Entlehnung kenntlich gemacht und andere als die angegebenen
 Hilfsmittel nicht benutzt habe.
 
-Oftersheim, \today, Unterschrift
+Altlußheim, \today, Unterschrift
 %***************
 \tableofcontents
 %***************
@@ -129,154 +129,21 @@ Oftersheim, \today, Unterschrift
 \chapter{Vorwort}
 	\label{chap:vorwort}
 \blockquote{
-\enquote{Wie hängen Sprache, Denken und Wirklichkeit
-zusammen?} – Das \enquote{linguistische Relativitätsprinzip} von Benjamin Le
-Whorf
+\enquote{Wie werden Wissenschaftler in der Literatur dargestellt und verwendet?} – Vom \enquote{Verrückten Wissenschaftler} zum wissbegierigen Doktor Faust.
 \smallskip\newline
-Inwiefern ist Sprache ein Medium der Erkenntnis?
-Was ist dahingehend die Ansicht der aktuellen Neurowissenschaft?}
-Als GFS-Thema hat mich diese Fragestellung sehr angeprochen.
-Die Deutschthemen der Klassenstufen davor erschienen mir oft entweder sehr
-trocken, oder sehr willkürlich.
+Dass Wissenschaftler in der Literatur ein sehr gern genutztes Element sind bemerken die meisten Menschen in unserer westlichen Welt bereits in frühem Alter. 
+Kinderserien, Kinderbücher, Comics und weitere Medien für Kinder bedienen sich unglaublich gerne an Wissenschaftlern als Charaktere - sowohl als Gegenspieler als auch als Mitstreiter auf der guten Seite.
+Gerade hierdurch können sich die meisten Menschen unter einem \enquote{Verrückten Wissenschaftler} direkt etwas vorstellen.
 
-Bei diesem Thema gefiel mir direkt der wissenschaftliche Ansatz, der in die
-psychologische und neurologische Richtung geht, auch wenn ich zugeben muss, dass
-mich diese Bereiche der Wissenschaft zwar interessieren, ich mich damit aber nie
-besonders tiefreichend beschäftigt habe.
+Dass Wissenschaftler auch in klassischen Werken der deutschen Geschichte vorkommen und bewusst verwendet werden ist dementsprechend auch keine Überraschung mehr.
+Sowohl Göthe bediente sich bereits in seinem bekanntesten Werk \enquote{Faust} daran, als auch Brecht in seinem Werk \enquote{Leben des Galilei}.
+Diese beiden Werke werde ich hauptsächlich nutzen, um die Eigenschaften eines Wissenschaftlers in der Literatur dieser Zeit herauszuarbeiten, um diese am Ende mit denen eines \enquote{Verrückten Wissenschaftlers} per Definition heute zu vergleichen.
 
-Ein nettes Nebenprodukt dieser GFS wird also die Erweiterung meines
-wissenschaftlichen Horizonts sein.
-\chapter{Einleitung}
-\label{chap:einleitung}
+Da ich mich mit heutigen Serien, Filmen, oder ähnlichen Medien sehr schlecht auskenne, bleibt der Vergleich aus persönlicher Erfahrung leider aus.
+Gerade hier werde ich mich vor allem an der allgemeinen Definition von \enquote{Verrückten Wissenschaftlern} bedienen.
+\chapter{Der Verrückte Wissenschaftler}
+	\label{chap:der verrückte Wissenschaftler}
 
-\chapter{Benjamin Lee Whorf}
-\label{chap:bjwhorf}
-Benjamin Lee Whorf wird am 24. April 1897 in Winthrop, Massachussetts geboren
-und starb früh im Alter von 44 Jahren in Wethersfield, Connecticut.
-\begin{figure}[!htb]
-	\centering
-	\includegraphics[width=0.25\textwidth]{whorf}
-	\caption[Benjamin Lee Whorf {\autocite{image:B_L_Whorf}}]{Benjamin Lee Whorf\footnotemark}
-	\label{fig:whorf}
-\end{figure}
-\footcitetext{image:B_L_Whorf}\\
-Zu seinen populärsten Arbeiten als Amateurlinguist zählen vor allem die Arbeiten,
-zu den amerikanischen Eingeborenensprachen, wie etwa die der Hopi, als auch die
-These der \enquote{sprachlichen Relativität}, um die es in dieser Facharbeit
-gehen soll.
-
-	\section{Leben und Werk}
-	\label{sec:lebenuwerk}
-	Whorf schließt 1928 das Chemietechnik-Studium am Massachusetts Institute of
-	Technology (MIT) ab und fängt bei einer Versicherungsgesellschaft als
-	Brandverhütungs-Inspektor an, zu arbeiten. Bei diesem Unternehmen wird er
-	zeitlebens bleiben und Karriere machen.
-
-	Sein Interesse an der Wissenschaft lindert dies jedoch nicht. Whorf lernt
-	Hebräisch und forscht im Bereich der aztekischen Nahua-Sprachen und der
-	Maya-Sprachen. Seine Erkenntnisse kommen jedoch zu früh und treffen auf wenig
-	Begeisterung. Erst nach seinem Tod entwickelt seine Arbeit Popularität und
-	wird aktiv diskutiert und kritisiert.
-		\subsection{Einflüsse}
-		\label{sec:einfluesse}
-		Zu Benjamin Whorfs größten Einflüssen zählt Edward Sapir. Als dieser zum
-		\textit{Sterling Professor für Linguistik und Anthropologie} an der
-		Universität Yale ernannt wird, fängt Whorf sofort an, bei ihm amerikanische
-		indianische Linuistik zu studieren.
-
-		Dabei macht Sapir ihn auf die Sprache der Hopi aufmerksam, die er durch
-		Informanten in New York lernt. In der Zeit danach entstehen mehrere Arbeiten,
-		die zum Teil erst nach seinem Tod veröffentlicht werden.
-
-		Den Denkanstoß in Richtung der Entwicklung seiner Konzepte, die später als
-		Sapir-Whorf-Hypothese bekannt wird, gibt ihm seine Arbeit für die
-		Versicherungsgesellschaft.
-
-		Bei einem der Fälle ging es um einen Unfall, bei dem eine Flasche mit der
-		Aufschrift \enquote{highly inflammable} neben einer Heizung Abgestellt wurde
-		der Arbeiter, dessen Muttersprache nicht Englisch war, ging davon aus, dass
-		\enquote{inflammable} unbrennbar hieße, da \enquote{flammable} brennbar
-		heißt. Da die Vorsilbe \enquote{in-} nicht immer das Gegenteil ausdrückt,
-		kam es zum Entzünden der Flasche.\autocite{wiki:Benjamin_Lee_Whorf}
-
-\chapter{Sapir-Whorf-Hypothese}
-\label{chap:s_p_hypothese}
-\section{Einleitung}
-\label{sec:s_p_einleitung}
-Die Sapir-Whorf-Hypothese ist eine, aus den Schriften Benjamin Lee Whorfs,
-abgeleitete Annahme der Linguistik. Hierbei wird versucht zu ergründen, ob eine
-Sprache, das heißt deren grammatikalische und lexikalische Strukturen, einen
-Einfluss auf die Welterfahrung einer Sprachgemeinschaft hat. Die Nennung der
-Sprachgemeinschaft ist in der Hinsicht wichtig, da die Welterfahrung im
-Vergleich verschiedenener Personen immer in gewissem Maße abweicht. Wenn die
-Welterfahrung jetzt allerdings bei einer Sprachgemeinschaft in eine ähnliche
-Richtung ginge, so kann davon ausgegangen werden, dass die Sprache das Denken
-beinflusst. So würde daraus folgen, dass es Gedanken einer Person gäbe, die nur
-in ihrer Muttersprache verstanden werden können und für andere Sprachen ganzlich
-unverständlich wären.
-
-Auf diesem Konzept basieren die folgenden Interpretationen, die sich das Konzept
-zum Axiom machen und somit von seiner Umabstreibarkeit ausgehen.
-\autocite{wiki:Sapir-Whorf-Hypothese}
-	\section{Whorf postum interpretiert}
-	\label{sec:s_p_interpret}
-	Wie bereits angesprochen, formuliert Whorf seine Konzepte nie zu der aktuellen
-	bekannten Hypothese aus. Dies geschieht durch Ableitungen anderer Personen,
-	die der dadurch entstandenen Theorie ihren Namen geben. Bei diesen
-	Interpretationen entstehen zwei Ausrichtungen:
-
-	\begin{enumerate}
-		\item Das Prinzip der linguistischen Relativität
-		\item Das Prinzip des linguistischen Determinismus
-	\end{enumerate}
-		\subsection{Das Prinzip der linguistischen Relativität}
-		\label{sec:s_p_lingrelativ}
-		Das Prinzip der linguistischen Relativität ist das gemäßigtere der beiden
-		Prinzipien und die ursprüngliche, direkt auf Whorfs Schriften
-		zurückzuführende Variante.
-		\blockquote{
-		\enquote{We dissect nature along lines laid down by our native languages. The
-		categories and types that we isolate from the world of phenomena we do not
-		find there because they stare every observer in the face; on the contrary,
-		the world is presented in a kaleidoscopic flux of impressions which has to
-		be organized by our minds – and this means largely by the linguistic systems
-		in our minds. We cut nature up, organize it into concepts, and ascribe
-		significances as we do, largely because we are parties to an agreement to
-		organize it in this ways – an agreement that holds throughout our speech
-		community and is codified in the patterns of language.}\autocite{article:Science_and_linguistics}
-		}
-		\blockquote{
-		\enquote{Wir gliedern die Natur nach den Vorgaben unserer Muttersprachen. Die
-		Kategorien und Typen, die wir aus der Welt der Phänomene isolieren, finden
-		wir dort noch nicht vor, sie blicken jedem Betrachter als eigene Gegebenheit
-		ins Gesicht. Die Welt stellt sich uns kaleidoskopartig als ein Fluss von
-		Eindrücken dar, der von unserem Verstand erst organisiert werden muss – und
-		das bedeutet weitgehend von den sprachlichen Strukturen unseres Verstandes.
-		Wir zerschneiden die Natur, ordnen sie ein in Begriffe und weisen diesen
-		Bedeutungen zu. Wir tun dies, als wären wir Teilnehmer einer Vereinbarung,
-		alles erst auf diese Weise zu organisieren – einer Vereinbarung, die für
-		unsere jeweilige Sprachgemeinschaft gilt und die bereits in unseren
-		Sprachmustern kodifiziert ist.}\autocite{article:Science_and_linguistics}
-		}
-		\begin{figure}[!htb]
-			\centering
-			\includegraphics[width=0.5\textwidth]{inuitcartoon}
-			\caption[Kritik an den Belegen Whorfs {\autocite{cartoon:Inuit}}]{Kritik an den Belegen Whorfs\footnotemark}
-			\label{fig:nutzlos}
-		\end{figure}
-		\footcitetext{cartoon:Inuit}
-
-		\subsection{Das Prinzip des linguistischen Determinismus}
-		\label{sec:s_p_lingdetermin}
-	\section{Aktualität der Hypothese}
-	\label{sec:s_p_aktualität}
-		\subsection{Neue empirische Forschung}
-		\label{sec:s_p_emp_forschung}
-		\subsection{Das grammatische Geschlecht}
-		\label{sec:s_p_gram_geschlecht}
-
-\chapter{Lehnwörter}
-\label{chap:lehnwörter}
 
 \printbibliography
 
