--- a/gfs-marschall/ling-relativ-prinzip.tex
+++ b/gfs-marschall/ling-relativ-prinzip.tex
@@ -126,6 +126,7 @@ Altlußheim, \today, Unterschrift
 %***************
 \listoftables
 %***************
+
 \chapter{Vorwort}
 	\label{chap:vorwort}
 \blockquote{
@@ -141,10 +142,49 @@ Diese beiden Werke werde ich hauptsächlich nutzen, um die Eigenschaften eines W
 
 Da ich mich mit heutigen Serien, Filmen, oder ähnlichen Medien sehr schlecht auskenne, bleibt der Vergleich aus persönlicher Erfahrung leider aus.
 Gerade hier werde ich mich vor allem an der allgemeinen Definition von \enquote{Verrückten Wissenschaftlern} bedienen.
+
 \chapter{Der Verrückte Wissenschaftler}
 	\label{chap:der verrückte Wissenschaftler}
+\section{Eigenschaften}
+	\label{sec:eigenschaften}
+Der Verrückte Wissenschaftler ist eine literarische Figur, an welcher sich Romane, Comics, Filme, Serien und andere Medien der aktuellen Zeit gerne bedienen.
+In diesen Werken treten sie meist in der Rolle des Bösewichten auf, da die typischen Eigenschaften eines Verrückten Wissenschaftlers dazu sehr gut passen.
+Wissenschaftler, welche nicht böse sind, sind dementsprechend häufig keine Verrückten Wissenschaftler, sondern einfach nur Wissenschaftler. 
+Die eben genannten Eigenschaften, welche den Charakter als Antargonisten optimal machen sind vor allem der Hang zu Sadismus, Größenwahn und einer gewissen Prahlsucht, aber auch der Drang zur Erlangung von viel Macht, was sich oft in dem Wunsch der Weltherrschaft oder Ähnlichem äußert.
+In seinem Verhalten fallen auch einige Muster auf.
+Darunter befindet sich ein donnerndes Lachen, häufig aus der Freude an der eigenen Boshaftigkeit oder Grausamkeit, aber auch das Ausführen von Grausamkeit ohne Grund, da dies ihm Spaß bereitet.
+Ein weiteres gern genutztes Verhaltensmuster ist der schikanöse Umgang mit seinen eigenen Helfern, an welchem die Empathielosigkeit dieser Charaktere gezeigt wird.
+\section{Entwicklung}
+	\label{sec:entwicklung}
+Wissenschaftler waren bereits ein beliebtes Element in Medien vor dem 20. Jahrhundert, allerdings stieg die Benutzung des Verrückten Wissenschaftlers nach dem zweiten Weltkrieg deutlich an.
+Dies lag vor allem daran, dass die während des zweiten Weltkrieges passierten Menschenversuche ein gutes Vorbild boten, um einen Wissenschaftler verrückt erscheinen zu lassen.
+Weitere Gründe hierfür sind die Atombombenabwürfe, welche die Grausamkeit mancher Menschen zeigen und die während des zweiten Weltkrieges passierten Ideologisierung der Wissenschaft, welche die Wissenschaft mehr ins Zentrum des menschlichen Denkens einiger Individuen rückte.
+Die Furcht vor der destruktiven Macht der Wissenschaft stieg aber auch während des Kalten Krieges stark an.
+Nachdem der Kalte Krieg endete entwickelte sich der Trend weg von Wissenschaftlerwidersachern hinzu maliziösen Wirtschaftsmenschen, also böse, schädliche und korrupte Bosse von großen Firmen.
+\section{Beispiele}
+	\label{sec:beispiele}
+Beispiele für einen Verrückten Wissenschaftler seit dem 2. Weltkrieg sind:
+\begin{itemize}
+	\item \enquote{Dr Seltsam} aus dem Film \enquote{Wie ich lernte, eine Bombe zu lieben}, für welchen der Wissenschaftler \enquote{Edward Teller}, der Erfinder der Wasserstoffbombe als Vorlage genutzt wurde. Hier erkennt man gut die aktuelle Angst vor der Macht der Wissenschaft.
+	\item Der Science-Action Film \enquote{Tarantula} aus dem Jahre 1955 nutzt auch einen Verrückten Wissenschaftler und zeigt auch die Angst vor der Macht der Wissenschaft anhand des Beispiels biologischer Mutationen.
+\end{itemize}
+Die Entwicklung erkennt man sehr gut an:
+\begin{itemize}
+	\item James Bond, dessen Widersacher der 60er Jahre \enquote{Dr. No} und \enquote{Ernst Stavro Blofeld} eindeutige Verrückte Wissenschaftler waren. Später, in den 90er Jahren gab es dann Widersacher wie \enquote{Elliott Carver} oder \enquote{Elektra King}, welche in die Kategorie der Wirtschaftswidersacher fallen.
+	\item Superman, dessen Widersacher \enquote{Lex Luthor} sich von einem Verrückten Wissenschaftler vor 1980 in ein korruptes Oberhaupt einer großen Firma veränderte in den 1980er Jahren.
+\end{itemize} 
 
-
+\chapter{Faust als Wissenschaftler}
+	\label{chap:faust als wissenschaftler}
+\section{Das Werk Faust}
+	\label{sec:das werk faust}
+In Göthes Drama Faust aus dem Jahre 1808 geht es um den Wissenschaftler Faust, welchem das Erlangen von Wissen als Hauptgrund zu leben gilt und welchem nichts lieber wäre als auf dem Wissensstand eines Gottes zu sein.
+Wichtig ist zu erwähnen, dass Göthe sich hier an dem Mythos um den bekannten Doktor Faustus bedient, weshalb man hier auch sehr gut erkennen kann, wie Wissenschaftler und Doktoren wie Faust zu der Zeit gesehen und dargestellt wurden.
+Zu Beginn des Dramas steht Faust dem Selbstmord nahe, da er aufgrund seines Wissensdrangs bereits alle aktuell verfügbaren Studiengänge studiert hatte und die Unmöglichkeit, weiteres Wissen lebend zu Erlangen ihn sich die Erfahrung des Todes wünschen lässt.
+Nachdem er den Selbstmord doch nicht begeht aufgrund von einer Konversation mit Geistern trifft er auf den Teufel Mephisto und schließt einen Pakt mit diesem ab um neues Wissen und neue Erfahrungen zu Erlangen.
+Dieser wettet, dass er Faust durch Genuss und Lust zufriedenstellen kann, allerdings geschieht das nicht trotz der durch Mephisto ermöglichten Auslebung von Genuss und Lust.
+Im Verlaufe der Handlung und seines Lustdrangs schwängert Faust außerdem die 14-Jährige Margarethe und macht sich dann aus dem Staub.
+Diese Zusammenfassung ist unvollständig und gilt nur der Nachvollziehbarkeit der im nächsten Punkt genannten Charaktereigenschaften.
 \printbibliography
 
 \end{document}
