--- a/gfs-marschall/ling-relativ-prinzip.bib
+++ b/gfs-marschall/ling-relativ-prinzip.bib
@@ -1,8 +1,32 @@
-
-@misc{wiki:Sapir-Whorf-Hypothese,
-	author = "Wikipedia",
-	title = "{Verrückter Wissenschaftler} --- {W}ikipedia{,} The Free Encyclopedia",
-	year = "2023",
-	howpublished = {\url{https://de.wikipedia.org/wiki/Verr%C3%BCckter_Wissenschaftler}},
-	note = "[Online; aufgerufen 31. Oktober 2023]"
+@misc{wiki:Verrückter_Wissenschaftler,
+   author = "Wikipedia",
+   title = "{Verrückter Wissenschaftler} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2023",
+   howpublished = {\url{http://de.wikipedia.org/w/index.php?title=Verr\%C3\%BCckter\%20Wissenschaftler&oldid=236759399}},
+   note = "[Online; accessed 07-November-2023]"
+ }
+ @misc{wiki:Faust_Studyflix,
+   author = "Studyflix",
+   title = "Faust – Charakterisierung",
+   howpublished = {\url{https://studyflix.de/deutsch/faust-charakterisierung-4101}},
+   note = "[Online; aufgerufen am 07. November 2023]"
 }
+@misc{wiki:Faust_Studysmarter,
+   author = "Studysmarter",
+   title = "Faust Charaktere",
+   howpublished = {\url{https://www.studysmarter.de/schule/deutsch/interpretation-literarischer-texte/faust-charaktere/}},
+   note = "[Online; aufgerufen am 07. November 2023]"
+}
+ @misc{wiki:Galilei_Studyflix,
+   author = "Studyflix",
+   title = "Leben des Galilei – Zusammenfassung",
+   howpublished = {\url{https://studyflix.de/deutsch/leben-des-galilei-zusammenfassung-4223}},
+   note = "[Online; aufgerufen am 07. November 2023]"
+}
+@misc{wiki:Leben_des_Galilei,
+   author = "Wikipedia",
+   title = "{Leben des Galilei} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2023",
+   howpublished = {\url{http://de.wikipedia.org/w/index.php?title=Leben\%20des\%20Galilei&oldid=238681444}},
+   note = "[Online; accessed 07-November-2023]"
+ }
