--- a/gfs-marschall/ling-relativ-prinzip.tex
+++ b/gfs-marschall/ling-relativ-prinzip.tex
@@ -129,12 +129,11 @@ Altlußheim, \today, Unterschrift
 
 \chapter{Vorwort}
 	\label{chap:vorwort}
-\blockquote{
-\enquote{Wie werden Wissenschaftler in der Literatur dargestellt und verwendet?} – Vom \enquote{Verrückten Wissenschaftler} zum wissbegierigen Doktor Faust.
+Wie werden Wissenschaftler in der Literatur dargestellt und verwendet? – Vom \enquote{Verrückten Wissenschaftler} zum wissbegierigen Doktor Faust.
 \smallskip\newline
 Dass Wissenschaftler in der Literatur ein sehr gern genutztes Element sind bemerken die meisten Menschen in unserer westlichen Welt bereits in frühem Alter. 
 Kinderserien, Kinderbücher, Comics und weitere Medien für Kinder bedienen sich unglaublich gerne an Wissenschaftlern als Charaktere - sowohl als Gegenspieler als auch als Mitstreiter auf der guten Seite.
-Gerade hierdurch können sich die meisten Menschen unter einem \enquote{Verrückten Wissenschaftler} direkt etwas vorstellen.
+Gerade hierdurch können sich die meisten Menschen unter einem Verrückten Wissenschaftler direkt etwas vorstellen.
 
 Dass Wissenschaftler auch in klassischen Werken der deutschen Geschichte vorkommen und bewusst verwendet werden ist dementsprechend auch keine Überraschung mehr.
 Sowohl Göthe bediente sich bereits in seinem bekanntesten Werk \enquote{Faust} daran, als auch Brecht in seinem Werk \enquote{Leben des Galilei}.
@@ -154,6 +153,7 @@ Die eben genannten Eigenschaften, welche den Charakter als Antargonisten optimal
 In seinem Verhalten fallen auch einige Muster auf.
 Darunter befindet sich ein donnerndes Lachen, häufig aus der Freude an der eigenen Boshaftigkeit oder Grausamkeit, aber auch das Ausführen von Grausamkeit ohne Grund, da dies ihm Spaß bereitet.
 Ein weiteres gern genutztes Verhaltensmuster ist der schikanöse Umgang mit seinen eigenen Helfern, an welchem die Empathielosigkeit dieser Charaktere gezeigt wird.
+\autocite{wiki:Verrückter_Wissenschaftler}
 \section{Entwicklung}
 	\label{sec:entwicklung}
 Wissenschaftler waren bereits ein beliebtes Element in Medien vor dem 20. Jahrhundert, allerdings stieg die Benutzung des Verrückten Wissenschaftlers nach dem zweiten Weltkrieg deutlich an.
@@ -161,6 +161,7 @@ Dies lag vor allem daran, dass die während des zweiten Weltkrieges passierten M
 Weitere Gründe hierfür sind die Atombombenabwürfe, welche die Grausamkeit mancher Menschen zeigen und die während des zweiten Weltkrieges passierten Ideologisierung der Wissenschaft, welche die Wissenschaft mehr ins Zentrum des menschlichen Denkens einiger Individuen rückte.
 Die Furcht vor der destruktiven Macht der Wissenschaft stieg aber auch während des Kalten Krieges stark an.
 Nachdem der Kalte Krieg endete entwickelte sich der Trend weg von Wissenschaftlerwidersachern hinzu maliziösen Wirtschaftsmenschen, also böse, schädliche und korrupte Bosse von großen Firmen.
+\autocite{wiki:Verrückter_Wissenschaftler}
 \section{Beispiele}
 	\label{sec:beispiele}
 Beispiele für einen Verrückten Wissenschaftler seit dem 2. Weltkrieg sind:
@@ -172,7 +173,8 @@ Die Entwicklung erkennt man sehr gut an:
 \begin{itemize}
 	\item James Bond, dessen Widersacher der 60er Jahre \enquote{Dr. No} und \enquote{Ernst Stavro Blofeld} eindeutige Verrückte Wissenschaftler waren. Später, in den 90er Jahren gab es dann Widersacher wie \enquote{Elliott Carver} oder \enquote{Elektra King}, welche in die Kategorie der Wirtschaftswidersacher fallen.
 	\item Superman, dessen Widersacher \enquote{Lex Luthor} sich von einem Verrückten Wissenschaftler vor 1980 in ein korruptes Oberhaupt einer großen Firma veränderte in den 1980er Jahren.
-\end{itemize} 
+\end{itemize}
+\autocite{wiki:Verrückter_Wissenschaftler}
 
 \chapter{Faust als Wissenschaftler}
 	\label{chap:faust als wissenschaftler}
@@ -185,6 +187,35 @@ Nachdem er den Selbstmord doch nicht begeht aufgrund von einer Konversation mit 
 Dieser wettet, dass er Faust durch Genuss und Lust zufriedenstellen kann, allerdings geschieht das nicht trotz der durch Mephisto ermöglichten Auslebung von Genuss und Lust.
 Im Verlaufe der Handlung und seines Lustdrangs schwängert Faust außerdem die 14-Jährige Margarethe und macht sich dann aus dem Staub.
 Diese Zusammenfassung ist unvollständig und gilt nur der Nachvollziehbarkeit der im nächsten Punkt genannten Charaktereigenschaften.
+\section{Fausts Eigenschaften als Wissenschaftler}
+	\label{sec:fausts Eigenschaften}
+Das Doktor- bzw Wissenschaftlerdasein allein zeugt davon, dass Faust ein schlauer und ehrgeiziger Mensch ist.
+Gerade als Doktor ist er in der Gesellschaft hoch angesehen und gilt als Bürger der gehobenen Klasse.
+Sein Wissensdrang kommt vor allem dadurch zur Geltung, dass er alle aktuell studierbaren Wissenschaften studiert hat und trotzdem mit seinem Wissen unzufrieden ist und zum Erlangen neues Wissens sogar auf unübliche Mittel wie den Tod oder die Magie zurückgreifen würde.
+Der Pakt mit dem Teufel Mephisto zeigt zusätzlich, wie sehr er nach Wissen strebt, da ihm das zu erlangende Wissen dieser Pakt wert ist.
+Unter Anderem hier wird klar, wie sehr er das gottesgleiche Dasein anstrebt.
+Genau dieses erlangte Wissen ist es auch, was ihn arrogant und besserwisserisch erscheinen lässt.
+Die aktuelle Epoche des Sturm und Drangs findet sich auch in ihm wieder, da er gerade in Gesellschaft mit Mephisto ein gefühlvolles, impulsives und idealistisches Genie ist.
+Außerdem kann er Liebe und Glück durch diese empfinden, was man am Beispiel von Gretchen sieht, auch wenn ihm dies nie die von Mephisto geplante Erfüllung gibt.
+Die Flucht nachdem er Margarethe schwanger gemacht hat zeigt zusätzlich wie feige, verantwortungslos, unzuverlässig und egoistisch er ist.
+Trotz dieser Eigenschaften zeigt sich ein vorhandenes schlechtes Gewissen an seiner Rückkehr.
+\autocite{wiki:Faust_Studyflix}
+\autocite{wiki:Faust_Studysmarter}
+
+\chapter{Galilei als Wissenschaftler}
+	\label{chap:galilei als wissenschaftler}
+\section{Das Werk \enquote{Leben des Galilei}}
+	\label{sec:das werk leben des galilei}
+Brecht unterrichtet, ist Lehrer und Wissenschaftler, verdient aber nicht genug Geld.
+Sein persönlicher Durchbruch ist die Erfindung eines sehr starken und effektiven Fernrohrs, was ihn zum Beweis dessen bringt, dass die Sonne im Mittelpunkt des Universums steht.
+Die Kirche akzeptiert dies allerdings nicht, da sie ihre Macht erhalten will, sodass er trotz seiner Gläubigkeit gegen die Kirche kämpft, da ihm die Wissenschaft wichtiger ist.
+Erst hält er seine Forschung für 8 Jahre geheim, bei der Ernennung eines neuen wissenschaftsinteressierteren Papstes sieht er allerdings seine Chance.
+Seine dann neu veröffentlichten Ergebnisse gefallen der Kirche aber immer noch nicht.
+Diese will ihre Macht sogar so sehr erhalten, dass sie ihn einsperren und foltern lassen wollen, woraufhin er seine Forschungen widerruft.
+Er forscht weiterhin heimlich und setzt damit sein Leben aufs Spiel.
+Am Ende bekennt er sich zu seinen menschlichen Schwächen, also der Angst vor der Folter und seine Vorliebe für Genüsse, was man an seinen letzten Sätzen \enquote{Ich muß jetzt essen. Ich esse immer noch gern.} sieht.
+\autocite{wiki:Galilei_Studyflix}
+\autocite{wiki:Leben_des_Galilei}
 \printbibliography
 
 \end{document}
