--- a/gfs-marschall/ling-relativ-prinzip.bib
+++ b/gfs-marschall/ling-relativ-prinzip.bib
@@ -3,19 +3,19 @@
    title = "{Verrückter Wissenschaftler} --- {W}ikipedia{,} The Free Encyclopedia",
    year = "2023",
    howpublished = {\url{http://de.wikipedia.org/w/index.php?title=Verr\%C3\%BCckter\%20Wissenschaftler&oldid=236759399}},
-   note = "[Online; accessed 07-November-2023]"
+   note = "[Online; aufgerufen am 31. Oktober 2023]"
  }
  @misc{wiki:Faust_Studyflix,
    author = "Studyflix",
    title = "Faust – Charakterisierung",
    howpublished = {\url{https://studyflix.de/deutsch/faust-charakterisierung-4101}},
-   note = "[Online; aufgerufen am 07. November 2023]"
+   note = "[Online; aufgerufen am 01. November 2023]"
 }
 @misc{wiki:Faust_Studysmarter,
    author = "Studysmarter",
    title = "Faust Charaktere",
    howpublished = {\url{https://www.studysmarter.de/schule/deutsch/interpretation-literarischer-texte/faust-charaktere/}},
-   note = "[Online; aufgerufen am 07. November 2023]"
+   note = "[Online; aufgerufen am 01. November 2023]"
 }
  @misc{wiki:Galilei_Studyflix,
    author = "Studyflix",
@@ -28,5 +28,23 @@
    title = "{Leben des Galilei} --- {W}ikipedia{,} The Free Encyclopedia",
    year = "2023",
    howpublished = {\url{http://de.wikipedia.org/w/index.php?title=Leben\%20des\%20Galilei&oldid=238681444}},
-   note = "[Online; accessed 07-November-2023]"
+   note = "[Online; aufgerufen am 07. November 2023]"
  }
+ @misc{wiki:Leben_des_Galilei_Charakterisierungen,
+   author = "Frustfrei-Lernen",
+   title = "Das Leben des Galilei Charakterisierung der Personen",
+   howpublished = {\url{https://www.frustfrei-lernen.de/deutsch/das-leben-des-galilei-brecht-bertolt-charakterisierung-personen.html}},
+   note = "[Online; aufgerufen am 07. November 2023]"
+}
+ @misc{wiki:Leben_des_Galilei_Studysmarter,
+   author = "Studysmarter",
+   title = "Leben des Galilei",
+   howpublished = {\url{https://www.studysmarter.de/schule/deutsch/drama/leben-des-galilei/}},
+   note = "[Online; aufgerufen am 07. November 2023]"
+}
+ @misc{wiki:Leben_des_Galilei_Personen,
+   author = "simpleclub",
+   title = "Leben des Galilei Personen",
+   howpublished = {\url{https://simpleclub.com/lessons/deutsch-leben-des-galilei-personen}},
+   note = "[Online; aufgerufen am 07. November 2023]"
+}
