--- a/gfs-marschall/ling-relativ-prinzip.tex
+++ b/gfs-marschall/ling-relativ-prinzip.tex
@@ -216,6 +216,57 @@ Er forscht weiterhin heimlich und setzt damit sein Leben aufs Spiel.
 Am Ende bekennt er sich zu seinen menschlichen Schwächen, also der Angst vor der Folter und seine Vorliebe für Genüsse, was man an seinen letzten Sätzen \enquote{Ich muß jetzt essen. Ich esse immer noch gern.} sieht.
 \autocite{wiki:Galilei_Studyflix}
 \autocite{wiki:Leben_des_Galilei}
+\section{Galileis Eigenschaften im Werk}
+	\label{sec:galileis eigenschaften im werk}
+Im Werk \enquote{Leben des Galilei} ist Galileo Galilei ein italienischer Wissenschaftler, welcher eine Tochter hat.
+Er ist außerdem Lehrer, aber dies nur aus Geldmangel, da das Wissenschaftlerdasein, welches er präferiert nicht genug Geld einbringt.
+Seine Hingabe zum Essen und Genießen zeigt außerdem, dass er ein Genießer ist.
+Seine innovative und kluge Natur erkennt man vor allem an der Erfindung bzw. Weiterentwicklung des Fernrohrs.
+Er ist außerdem ein überzeugender und taktischer Mensch.
+Obwohl er sowohl der Wissenschaft, als auch der Kirche anhängt, präferiert er die Wissenschaft, was man daran sieht, dass er sich gegen die Kirche stellt. 
+Hier findet auch eine merkliche Veränderung statt, als er realisiert, dass er sich gegen die Kirche stellen muss um der Wissenschaft vollständig zu dienen, was eine Charakterentwicklung hervorruft.
+Eigentlich handelt er in gutem Gewissen, denn er will der Kirche mit seinen Forschungen helfen.
+Dass diese von der Kirche abgelehnt werden zerstört ihn innerlich, allerdings setzt er im Verlaufe des Werkes auch sein Leben aufs Spiel um seine Forschungen durchzusetzen, unabhängig davon, ob dies tatsächlich funktioniert oder nicht.
+Seine Liebe zur Wissenschaft hängt auch damit zusammen, dass er extrem neugierig und wissbegierig ist.
+In seinem wissenschaftlichen Eifer wirkt er wie von der Wissenschaft besessen und glaubt stets an einen Sieg der Vernunft, also dass die Gesellschaft seinen Forschungen glauben wird anstatt das machterhaltende Weltbild der Kirche zu behalten.
+Dies passiert zu seinen Lebzeiten nicht, wodurch man merkt wie falsch seine politischen Prognosen verglichen mit seinem genauen und misstrauischen Vorgehen in der Wissenschaft sind.
+Im Verlaufe des Werkes erblindet er, was hervorruft dass man zwei gegenläufige Prozesse hat. 
+Zum einen sieht er tatsächlich weniger, zum anderen erkennt er immer mehr Zusammenhänge.
+Er schätzt fast ausschließlich andere Wissenschaftsinteressierte, aber nur falls sie nicht aus Angst vor der Kirche schweigen.
+Dadurch vernachlässigt er auch seine eigene Tochter.
+Ihm liegt außerdem viel am Allgemeinwohl, denn er forscht für dieses und verfasst seine Ergebnisse sogar nicht in Latein, um sie für die Allgemeinheit verständlich zu machen.
+Gegen Ende des Stücks findet eine weitere Charakterentwicklung statt, bei welcher er beginnt Reue zu spüren.
+Er bereut es sehr, seine Forschungen zugunsten der Kirche widerrufen zu haben.
+\autocite{wiki:Leben_des_Galilei}
+\autocite{wiki:Leben_des_Galilei_Charakterisierungen}
+\autocite{wiki:Leben_des_Galilei_Studysmarter}
+\autocite{wiki:Leben_des_Galilei_Personen}
+
+\chapter{Faust und Galilei im Vergleich}
+	\label{chap:faust galilei vergleich}
+\section{Unterschiede}
+	\label{sec:unterschiede}
+
+\section{Gemeinsamkeiten}
+	\label{sec:gemeinsamkeiten}
+
+\section{Schlussfolgerung}
+	\label{sec:schlussfolgerung}
+Wie man an den Gemeinsamkeiten erkennen kann, sind Wissenschaftler in literarischen Werken meist kluge Menschen, für welche der unstillbare Drang nach Wissenserlangung ihr Leben bestimmt und für die die Wissenschaft über allem steht.
+Sie sind häufig gegen ihren Willen Lehrer und würden alles aufs Spiel setzen um mehr Wissen zu erlangen.
+Im Verlaufe des Stückes wird gezeigt wie sie immer mehr Zusammenhänge erkennen, unter anderem aufgrund von ihrem Ehrgeiz.
+Dass sie die Wissenschaft über die Kirche bzw. Religion stellen ist für die Zeit in der diese Werke entstanden auch etwas, was sehr wenige Menschen ausmachte und somit zu den prägnanten Merkmalen gehört.
+Negative Aspekte an ihnen sind hier wie feige und verantwortungslos sie sind, gerade in Hinsicht auf ihre Reaktionen auf Probleme.
+
+\chapter{Zusammenfassung}
+	\label{chap:zusammenfassung}
+Sind Wissenschaftler in der deutschen Literatur das, was wir als verrückte Wissenschaftler kennen?
+Im Gegensatz zu den Verrückten Wissenschaftlern in aktueller Zeit sind Faust und Galilei die Protagonisten und nicht die Antargonisten, obwohl sie trotzdem gegen den Trend der aktuellen Gesellschaft gehen und somit eher weniger als Charakter beliebt sind.
+Der Hang zu bösen Taten fehlt auch, da das Erlangen von Wissen oder das Forschen nicht aus Gründen der Machterweiterung oder purem Spaß an Boshaftigkeit passieren.
+Hier fällt trotzdem die Gemeinsamkeit des Egoismus auf, gerade verglichen zu Faust, der einige Verluste anderer Menschen in Kauf nimmt um sein Wissen zu erweitern.
+Die typischen Verhaltensmuster eines Verrückten Wissenschaftlers findet man allerdings nicht wieder, gerade durch den Mangel an Spaß an dem bloßen \enquote{Böse-sein}.
+Die hieraus zu ziehende Schlussfolgerung ist, dass die Gemeinsamkeiten auf einen Zusammenhang schließen lassen, auch wenn der Wissenschaftler und der Verrückte Wissenschaftler trotzdem zwei verschiedene literarische Figuren sind.
+
 \printbibliography
 
 \end{document}
