--- a/gfs-marschall/ling-relativ-prinzip.tex
+++ b/gfs-marschall/ling-relativ-prinzip.tex
@@ -35,6 +35,8 @@
 	]{caption}
 %****************************************
 
+\usepackage{tabulary}
+
 % Blind text*****************************
 \usepackage{lipsum}
 %****************************************
@@ -121,8 +123,6 @@ Hilfsmittel nicht benutzt habe.
 Altlußheim, \today, Unterschrift
 %***************
 \tableofcontents
-%***************
-\listoffigures
 %***************
 \listoftables
 %***************
@@ -246,10 +246,65 @@ Er bereut es sehr, seine Forschungen zugunsten der Kirche widerrufen zu haben.
 	\label{chap:faust galilei vergleich}
 \section{Unterschiede}
 	\label{sec:unterschiede}
-
+	\begin{table}[!htb]
+		\centering
+		\caption[Unterschiede]{Unterschiede\footnotemark}
+		\begin{tabulary}{\textwidth}{|C|C|}
+			\hline
+			\textbf{Faust} & \textbf{Galilei} \\
+			\hline
+			Familienlos & hat Familie (eine Tochter) \\
+			\hline
+			Bürger der gehobenen Klasse & arm bzw. in Geldnot \\
+			\hline
+			sieht im Genuss keinen Sinn & Genießer \\
+			\hline
+			nicht gläubig & gläubig \\
+			\hline
+			Was die Kirche tut interessiert ihn nicht & Will der Kirche mit seinen Wissenschaften eigentlich helfen \\
+			\hline
+			Hält nicht viel von seinen Mitmenschen & Glaubt an die Vernunft in seinen Mitmenschen \\
+			\hline
+			Interessiert sich für seine Mitmenschen und deren Machenschaften wenig bis gar nicht & Schätzt Mitmenschen, aber ausschließlich Wissenschaftsinteressierte \\
+			\hline
+			Eignet sich Wissen aus Interesse an & Forscht für die Allgemeinheit \\
+			\hline
+			Fokus auf Wissenserlangung (für ihn Neues) & Fokus auf Forschung (für die Allgemeinheit Neues) \\
+			\hline
+			Gefühlsvoll (hauptsächlich in Mephistos Gesellschaft) & Gefühlslos, abgesehen von Wut und Enttäuschung gegenüber der Kirche \\
+			\hline
+		\end{tabulary}
+		\label{tab:unterschiede}
+	\end{table}
+\newpage
 \section{Gemeinsamkeiten}
 	\label{sec:gemeinsamkeiten}
-
+	\begin{table}[!htb]
+		\centering
+		\caption[Gemeinsamkeiten]{Gemeinsamkeiten\footnotemark}
+		\begin{tabulary}{\textwidth}{|C|C|}
+			\hline
+			\textbf{Faust} & \textbf{Galilei} \\
+			\hline
+			Lehrer, aber präferiert Wissensaneignung & Lehrer, aber präferiert Forschung \\
+			\hline
+			Wissen steht über Allem & Forschung/Wissen steht über Allem \\
+			\hline
+			Klug, ehrgeizig & Klug, ehrgeizig  \\
+			\hline
+			Extrem wissbegierig (permanent im Wissenserlangungseifer) & Extrem wissbegierig (von der Wissenschaft wie besessen) \\
+			\hline
+			Setzt sein Leben für das Erlangen von Wissen aufs Spiel & Riskiert sein Leben um zu forschen  \\
+			\hline
+			Erkennt mehr Zusammenhänge im Verlaufe des Stückes & Erkennt mehr Zusammenhänge im Verlaufe des Stückes  \\
+			\hline
+			schätzt die Kirche bzw. Religion nicht & stellt die Wissenschaft und Forschung über die Kirche  \\
+			\hline
+			Verantwortungslos und flieht vor Problemen & kümmert sich mehr um die Wissenschaft als seine eigene Familie und versteckt sich vor Problemen \\
+			\hline
+		\end{tabulary}
+		\label{tab:gemeinsamkeiten}
+	\end{table}
 \section{Schlussfolgerung}
 	\label{sec:schlussfolgerung}
 Wie man an den Gemeinsamkeiten erkennen kann, sind Wissenschaftler in literarischen Werken meist kluge Menschen, für welche der unstillbare Drang nach Wissenserlangung ihr Leben bestimmt und für die die Wissenschaft über allem steht.
