--- a/gfs-marschall/ling-relativ-prinzip.tex
+++ b/gfs-marschall/ling-relativ-prinzip.tex
@@ -147,9 +147,9 @@ Gerade hier werde ich mich vor allem an der allgemeinen Definition von \enquote{
 \section{Eigenschaften}
 	\label{sec:eigenschaften}
 Der Verrückte Wissenschaftler ist eine literarische Figur, an welcher sich Romane, Comics, Filme, Serien und andere Medien der aktuellen Zeit gerne bedienen.
-In diesen Werken treten sie meist in der Rolle des Bösewichten auf, da die typischen Eigenschaften eines Verrückten Wissenschaftlers dazu sehr gut passen.
+In diesen Werken treten sie meist in der Rolle des Bösewichtes auf, da die typischen Eigenschaften eines Verrückten Wissenschaftlers dazu sehr gut passen.
 Wissenschaftler, welche nicht böse sind, sind dementsprechend häufig keine Verrückten Wissenschaftler, sondern einfach nur Wissenschaftler. 
-Die eben genannten Eigenschaften, welche den Charakter als Antargonisten optimal machen sind vor allem der Hang zu Sadismus, Größenwahn und einer gewissen Prahlsucht, aber auch der Drang zur Erlangung von viel Macht, was sich oft in dem Wunsch der Weltherrschaft oder Ähnlichem äußert.
+Die eben genannten Eigenschaften, welche den Charakter als Antagonisten optimal machen sind vor allem der Hang zu Sadismus, Größenwahn und einer gewissen Prahlsucht, aber auch der Drang zur Erlangung von viel Macht, was sich oft in dem Wunsch der Weltherrschaft oder Ähnlichem äußert.
 In seinem Verhalten fallen auch einige Muster auf.
 Darunter befindet sich ein donnerndes Lachen, häufig aus der Freude an der eigenen Boshaftigkeit oder Grausamkeit, aber auch das Ausführen von Grausamkeit ohne Grund, da dies ihm Spaß bereitet.
 Ein weiteres gern genutztes Verhaltensmuster ist der schikanöse Umgang mit seinen eigenen Helfern, an welchem die Empathielosigkeit dieser Charaktere gezeigt wird.
@@ -158,7 +158,7 @@ Ein weiteres gern genutztes Verhaltensmuster ist der schikanöse Umgang mit sein
 	\label{sec:entwicklung}
 Wissenschaftler waren bereits ein beliebtes Element in Medien vor dem 20. Jahrhundert, allerdings stieg die Benutzung des Verrückten Wissenschaftlers nach dem zweiten Weltkrieg deutlich an.
 Dies lag vor allem daran, dass die während des zweiten Weltkrieges passierten Menschenversuche ein gutes Vorbild boten, um einen Wissenschaftler verrückt erscheinen zu lassen.
-Weitere Gründe hierfür sind die Atombombenabwürfe, welche die Grausamkeit mancher Menschen zeigen und die während des zweiten Weltkrieges passierten Ideologisierung der Wissenschaft, welche die Wissenschaft mehr ins Zentrum des menschlichen Denkens einiger Individuen rückte.
+Weitere Gründe hierfür sind die Atombombenabwürfe, welche die Grausamkeit mancher Menschen zeigen und die während des zweiten Weltkrieges passierte Ideologisierung der Wissenschaft, welche die Wissenschaft mehr ins Zentrum des menschlichen Denkens einiger Individuen rückte.
 Die Furcht vor der destruktiven Macht der Wissenschaft stieg aber auch während des Kalten Krieges stark an.
 Nachdem der Kalte Krieg endete entwickelte sich der Trend weg von Wissenschaftlerwidersachern hinzu maliziösen Wirtschaftsmenschen, also böse, schädliche und korrupte Bosse von großen Firmen.
 \autocite{wiki:Verrückter_Wissenschaftler}
@@ -189,9 +189,9 @@ Im Verlaufe der Handlung und seines Lustdrangs schwängert Faust außerdem die 1
 Diese Zusammenfassung ist unvollständig und gilt nur der Nachvollziehbarkeit der im nächsten Punkt genannten Charaktereigenschaften.
 \section{Fausts Eigenschaften als Wissenschaftler}
 	\label{sec:fausts Eigenschaften}
-Das Doktor- bzw Wissenschaftlerdasein allein zeugt davon, dass Faust ein schlauer und ehrgeiziger Mensch ist.
+Das Doktor- bzw. Wissenschaftlerdasein allein zeugt davon, dass Faust ein schlauer und ehrgeiziger Mensch ist.
 Gerade als Doktor ist er in der Gesellschaft hoch angesehen und gilt als Bürger der gehobenen Klasse.
-Sein Wissensdrang kommt vor allem dadurch zur Geltung, dass er alle aktuell studierbaren Wissenschaften studiert hat und trotzdem mit seinem Wissen unzufrieden ist und zum Erlangen neues Wissens sogar auf unübliche Mittel wie den Tod oder die Magie zurückgreifen würde.
+Sein Wissensdrang kommt vor allem dadurch zur Geltung, dass er alle aktuell studierbaren Wissenschaften studiert hat und trotzdem mit seinem Wissen unzufrieden ist und zum Erlangen neuen Wissens sogar auf unübliche Mittel wie den Tod oder die Magie zurückgreifen würde.
 Der Pakt mit dem Teufel Mephisto zeigt zusätzlich, wie sehr er nach Wissen strebt, da ihm das zu erlangende Wissen dieser Pakt wert ist.
 Unter Anderem hier wird klar, wie sehr er das gottesgleiche Dasein anstrebt.
 Genau dieses erlangte Wissen ist es auch, was ihn arrogant und besserwisserisch erscheinen lässt.
@@ -214,6 +214,7 @@ Seine dann neu veröffentlichten Ergebnisse gefallen der Kirche aber immer noch 
 Diese will ihre Macht sogar so sehr erhalten, dass sie ihn einsperren und foltern lassen wollen, woraufhin er seine Forschungen widerruft.
 Er forscht weiterhin heimlich und setzt damit sein Leben aufs Spiel.
 Am Ende bekennt er sich zu seinen menschlichen Schwächen, also der Angst vor der Folter und seine Vorliebe für Genüsse, was man an seinen letzten Sätzen \enquote{Ich muß jetzt essen. Ich esse immer noch gern.} sieht.
+Auch diese Zusammenfassung ist im Sinne der Darstellung des Charakters Galilei gekürzt.
 \autocite{wiki:Galilei_Studyflix}
 \autocite{wiki:Leben_des_Galilei}
 \section{Galileis Eigenschaften im Werk}
@@ -228,9 +229,9 @@ Hier findet auch eine merkliche Veränderung statt, als er realisiert, dass er s
 Eigentlich handelt er in gutem Gewissen, denn er will der Kirche mit seinen Forschungen helfen.
 Dass diese von der Kirche abgelehnt werden zerstört ihn innerlich, allerdings setzt er im Verlaufe des Werkes auch sein Leben aufs Spiel um seine Forschungen durchzusetzen, unabhängig davon, ob dies tatsächlich funktioniert oder nicht.
 Seine Liebe zur Wissenschaft hängt auch damit zusammen, dass er extrem neugierig und wissbegierig ist.
-In seinem wissenschaftlichen Eifer wirkt er wie von der Wissenschaft besessen und glaubt stets an einen Sieg der Vernunft, also dass die Gesellschaft seinen Forschungen glauben wird anstatt das machterhaltende Weltbild der Kirche zu behalten.
+In seinem wissenschaftlichen Eifer wirkt er wie von der Wissenschaft besessen und glaubt stets an einen Sieg der Vernunft, also dass die Gesellschaft seinen Forschungen glauben wird anstatt weiter an das zur Machterhaltung der Kirche dienende Weltbild zu glauben.
 Dies passiert zu seinen Lebzeiten nicht, wodurch man merkt wie falsch seine politischen Prognosen verglichen mit seinem genauen und misstrauischen Vorgehen in der Wissenschaft sind.
-Im Verlaufe des Werkes erblindet er, was hervorruft dass man zwei gegenläufige Prozesse hat. 
+Im Verlaufe des Werkes erblindet er, was hervorruft, dass man zwei gegenläufige Prozesse hat. 
 Zum einen sieht er tatsächlich weniger, zum anderen erkennt er immer mehr Zusammenhänge.
 Er schätzt fast ausschließlich andere Wissenschaftsinteressierte, aber nur falls sie nicht aus Angst vor der Kirche schweigen.
 Dadurch vernachlässigt er auch seine eigene Tochter.
@@ -316,7 +317,7 @@ Negative Aspekte an ihnen sind hier wie feige und verantwortungslos sie sind, ge
 \chapter{Zusammenfassung}
 	\label{chap:zusammenfassung}
 Sind Wissenschaftler in der deutschen Literatur das, was wir als verrückte Wissenschaftler kennen?
-Im Gegensatz zu den Verrückten Wissenschaftlern in aktueller Zeit sind Faust und Galilei die Protagonisten und nicht die Antargonisten, obwohl sie trotzdem gegen den Trend der aktuellen Gesellschaft gehen und somit eher weniger als Charakter beliebt sind.
+Im Gegensatz zu den Verrückten Wissenschaftlern in aktueller Zeit sind Faust und Galilei die Protagonisten und nicht die Antagonisten, obwohl sie trotzdem gegen den Trend der aktuellen Gesellschaft gehen und somit eher weniger als Charakter beliebt sind.
 Der Hang zu bösen Taten fehlt auch, da das Erlangen von Wissen oder das Forschen nicht aus Gründen der Machterweiterung oder purem Spaß an Boshaftigkeit passieren.
 Hier fällt trotzdem die Gemeinsamkeit des Egoismus auf, gerade verglichen zu Faust, der einige Verluste anderer Menschen in Kauf nimmt um sein Wissen zu erweitern.
 Die typischen Verhaltensmuster eines Verrückten Wissenschaftlers findet man allerdings nicht wieder, gerade durch den Mangel an Spaß an dem bloßen \enquote{Böse-sein}.
