--- a/gfs-marschall/ling-relativ-prinzip.tex
+++ b/gfs-marschall/ling-relativ-prinzip.tex
@@ -131,15 +131,15 @@ Altlußheim, \today, Unterschrift
 	\label{chap:vorwort}
 Wie werden Wissenschaftler in der Literatur dargestellt und verwendet? – Vom \enquote{Verrückten Wissenschaftler} zum wissbegierigen Doktor Faust.
 \smallskip\newline
-Dass Wissenschaftler in der Literatur ein sehr gern genutztes Element sind bemerken die meisten Menschen in unserer westlichen Welt bereits in frühem Alter. 
+Dass Wissenschaftler in der Literatur ein sehr gern genutztes Element sind, bemerken die meisten Menschen in unserer westlichen Welt bereits in frühem Alter. 
 Kinderserien, Kinderbücher, Comics und weitere Medien für Kinder bedienen sich unglaublich gerne an Wissenschaftlern als Charaktere - sowohl als Gegenspieler als auch als Mitstreiter auf der guten Seite.
 Gerade hierdurch können sich die meisten Menschen unter einem Verrückten Wissenschaftler direkt etwas vorstellen.
 
-Dass Wissenschaftler auch in klassischen Werken der deutschen Geschichte vorkommen und bewusst verwendet werden ist dementsprechend auch keine Überraschung mehr.
-Sowohl Göthe bediente sich bereits in seinem bekanntesten Werk \enquote{Faust} daran, als auch Brecht in seinem Werk \enquote{Leben des Galilei}.
+Dementsprechend ist es auch keine Überraschung mehr, dass Wissenschaftler auch in klassischen deutschen Werken verwendet werden.
+Sowohl Goethe bediente sich bereits in seinem bekanntesten Werk \enquote{Faust} daran, als auch Brecht in seinem Werk \enquote{Leben des Galilei}.
 Diese beiden Werke werde ich hauptsächlich nutzen, um die Eigenschaften eines Wissenschaftlers in der Literatur dieser Zeit herauszuarbeiten, um diese am Ende mit denen eines \enquote{Verrückten Wissenschaftlers} per Definition heute zu vergleichen.
 
-Da ich mich mit heutigen Serien, Filmen, oder ähnlichen Medien sehr schlecht auskenne, bleibt der Vergleich aus persönlicher Erfahrung leider aus.
+Da ich mich mit heutigen Serien, Filmen oder ähnlichen Medien sehr schlecht auskenne, bleibt der Vergleich aus persönlicher Erfahrung leider aus.
 Gerade hier werde ich mich vor allem an der allgemeinen Definition von \enquote{Verrückten Wissenschaftlern} bedienen.
 
 \chapter{Der Verrückte Wissenschaftler}
@@ -149,25 +149,25 @@ Gerade hier werde ich mich vor allem an der allgemeinen Definition von \enquote{
 Der Verrückte Wissenschaftler ist eine literarische Figur, an welcher sich Romane, Comics, Filme, Serien und andere Medien der aktuellen Zeit gerne bedienen.
 In diesen Werken treten sie meist in der Rolle des Bösewichtes auf, da die typischen Eigenschaften eines Verrückten Wissenschaftlers dazu sehr gut passen.
 Wissenschaftler, welche nicht böse sind, sind dementsprechend häufig keine Verrückten Wissenschaftler, sondern einfach nur Wissenschaftler. 
-Die eben genannten Eigenschaften, welche den Charakter als Antagonisten optimal machen sind vor allem der Hang zu Sadismus, Größenwahn und einer gewissen Prahlsucht, aber auch der Drang zur Erlangung von viel Macht, was sich oft in dem Wunsch der Weltherrschaft oder Ähnlichem äußert.
+Die eben genannten Eigenschaften, welche den Charakter als Antagonisten optimal machen, sind vor allem der Hang zu Sadismus, Größenwahn und einer gewissen Prahlsucht, aber auch der Drang zur Erlangung von viel Macht, was sich oft in dem Wunsch der Weltherrschaft oder Ähnlichem äußert.
 In seinem Verhalten fallen auch einige Muster auf.
-Darunter befindet sich ein donnerndes Lachen, häufig aus der Freude an der eigenen Boshaftigkeit oder Grausamkeit, aber auch das Ausführen von Grausamkeit ohne Grund, da dies ihm Spaß bereitet.
+Darunter befindet sich ein donnerndes Lachen, häufig aus Freude an der eigenen Boshaftigkeit oder Grausamkeit, aber auch das Ausführen von Grausamkeit ohne Grund, da dies ihm Spaß bereitet.
 Ein weiteres gern genutztes Verhaltensmuster ist der schikanöse Umgang mit seinen eigenen Helfern, an welchem die Empathielosigkeit dieser Charaktere gezeigt wird.
 \autocite{wiki:Verrückter_Wissenschaftler}
 \section{Entwicklung}
 	\label{sec:entwicklung}
 Wissenschaftler waren bereits ein beliebtes Element in Medien vor dem 20. Jahrhundert, allerdings stieg die Benutzung des Verrückten Wissenschaftlers nach dem zweiten Weltkrieg deutlich an.
-Dies lag vor allem daran, dass die während des zweiten Weltkrieges passierten Menschenversuche ein gutes Vorbild boten, um einen Wissenschaftler verrückt erscheinen zu lassen.
-Weitere Gründe hierfür sind die Atombombenabwürfe, welche die Grausamkeit mancher Menschen zeigen und die während des zweiten Weltkrieges passierte Ideologisierung der Wissenschaft, welche die Wissenschaft mehr ins Zentrum des menschlichen Denkens einiger Individuen rückte.
+Dies lag vor allem daran, dass die während des zweiten Weltkrieges durchgeführten Menschenversuche ein gutes Vorbild boten, um einen Wissenschaftler verrückt erscheinen zu lassen.
+Weitere Gründe hierfür sind die Atombombenabwürfe, welche die Grausamkeit mancher Menschen zeigen, und die während des zweiten Weltkrieges erfolgte Ideologisierung der Wissenschaft, welche die Wissenschaft mehr ins Zentrum des menschlichen Denkens einiger Individuen rückte.
 Die Furcht vor der destruktiven Macht der Wissenschaft stieg aber auch während des Kalten Krieges stark an.
-Nachdem der Kalte Krieg endete entwickelte sich der Trend weg von Wissenschaftlerwidersachern hinzu maliziösen Wirtschaftsmenschen, also böse, schädliche und korrupte Bosse von großen Firmen.
+Nachdem der Kalte Krieg endete, entwickelte sich der Trend weg von Wissenschaftlerwidersachern hin zu maliziösen Wirtschaftsmenschen, also böse, schädliche und korrupte Bosse von großen Firmen.
 \autocite{wiki:Verrückter_Wissenschaftler}
 \section{Beispiele}
 	\label{sec:beispiele}
 Beispiele für einen Verrückten Wissenschaftler seit dem 2. Weltkrieg sind:
 \begin{itemize}
-	\item \enquote{Dr Seltsam} aus dem Film \enquote{Wie ich lernte, eine Bombe zu lieben}, für welchen der Wissenschaftler \enquote{Edward Teller}, der Erfinder der Wasserstoffbombe als Vorlage genutzt wurde. Hier erkennt man gut die aktuelle Angst vor der Macht der Wissenschaft.
-	\item Der Science-Action Film \enquote{Tarantula} aus dem Jahre 1955 nutzt auch einen Verrückten Wissenschaftler und zeigt auch die Angst vor der Macht der Wissenschaft anhand des Beispiels biologischer Mutationen.
+	\item \enquote{Dr Seltsam} aus dem Film \enquote{Wie ich lernte, eine Bombe zu lieben}, für welchen der Wissenschaftler \enquote{Edward Teller}, der Erfinder der Wasserstoffbombe, als Vorlage genutzt wurde. Hier erkennt man gut die aktuelle Angst vor der Macht der Wissenschaft.
+	\item Der Science-Action Film \enquote{Tarantula} aus dem Jahre 1955 nutzt auch einen Verrückten Wissenschaftler und zeigt ebenfalls die Angst vor der Macht der Wissenschaft anhand des Beispiels biologischer Mutationen.
 \end{itemize}
 Die Entwicklung erkennt man sehr gut an:
 \begin{itemize}
@@ -180,11 +180,11 @@ Die Entwicklung erkennt man sehr gut an:
 	\label{chap:faust als wissenschaftler}
 \section{Das Werk Faust}
 	\label{sec:das werk faust}
-In Göthes Drama Faust aus dem Jahre 1808 geht es um den Wissenschaftler Faust, welchem das Erlangen von Wissen als Hauptgrund zu leben gilt und welchem nichts lieber wäre als auf dem Wissensstand eines Gottes zu sein.
-Wichtig ist zu erwähnen, dass Göthe sich hier an dem Mythos um den bekannten Doktor Faustus bedient, weshalb man hier auch sehr gut erkennen kann, wie Wissenschaftler und Doktoren wie Faust zu der Zeit gesehen und dargestellt wurden.
-Zu Beginn des Dramas steht Faust dem Selbstmord nahe, da er aufgrund seines Wissensdrangs bereits alle aktuell verfügbaren Studiengänge studiert hatte und die Unmöglichkeit, weiteres Wissen lebend zu Erlangen ihn sich die Erfahrung des Todes wünschen lässt.
-Nachdem er den Selbstmord doch nicht begeht aufgrund von einer Konversation mit Geistern trifft er auf den Teufel Mephisto und schließt einen Pakt mit diesem ab um neues Wissen und neue Erfahrungen zu Erlangen.
-Dieser wettet, dass er Faust durch Genuss und Lust zufriedenstellen kann, allerdings geschieht das nicht trotz der durch Mephisto ermöglichten Auslebung von Genuss und Lust.
+In Goethes Drama Faust aus dem Jahre 1808 geht es um den Wissenschaftler Faust, welchem das Erlangen von Wissen als Hauptgrund zu leben gilt und welchem nichts lieber wäre, als auf dem Wissensstand eines Gottes zu sein.
+Wichtig ist zu erwähnen, dass Goethe sich hier an dem Mythos um den bekannten Doktor Faustus bedient, weshalb man hier auch sehr gut erkennen kann, wie Wissenschaftler und Doktoren wie Faust zu der Zeit gesehen und dargestellt wurden.
+Zu Beginn des Dramas steht Faust dem Selbstmord nahe, da er aufgrund seines Wissensdrangs bereits alle aktuell verfügbaren Studiengänge studiert hatte und die Unmöglichkeit, weiteres Wissen lebend zu erlangen ihn sich die Erfahrung des Todes wünschen lässt.
+Nachdem er den Selbstmord doch nicht begeht, aufgrund einer Konversation mit Geistern, trifft er auf den Teufel Mephisto und schließt einen Pakt mit diesem ab, um neues Wissen und neue Erfahrungen zu erlangen.
+Dieser wettet, dass er Faust durch Genuss und Lust zufriedenstellen kann, allerdings geschieht das nicht, trotz der durch Mephisto ermöglichten Auslebung von Genuss und Lust.
 Im Verlaufe der Handlung und seines Lustdrangs schwängert Faust außerdem die 14-Jährige Margarethe und macht sich dann aus dem Staub.
 Diese Zusammenfassung ist unvollständig und gilt nur der Nachvollziehbarkeit der im nächsten Punkt genannten Charaktereigenschaften.
 \section{Fausts Eigenschaften als Wissenschaftler}
@@ -197,7 +197,7 @@ Unter Anderem hier wird klar, wie sehr er das gottesgleiche Dasein anstrebt.
 Genau dieses erlangte Wissen ist es auch, was ihn arrogant und besserwisserisch erscheinen lässt.
 Die aktuelle Epoche des Sturm und Drangs findet sich auch in ihm wieder, da er gerade in Gesellschaft mit Mephisto ein gefühlvolles, impulsives und idealistisches Genie ist.
 Außerdem kann er Liebe und Glück durch diese empfinden, was man am Beispiel von Gretchen sieht, auch wenn ihm dies nie die von Mephisto geplante Erfüllung gibt.
-Die Flucht nachdem er Margarethe schwanger gemacht hat zeigt zusätzlich wie feige, verantwortungslos, unzuverlässig und egoistisch er ist.
+Die Flucht, nachdem er Margarethe geschwängert hat, zeigt zusätzlich wie feige, verantwortungslos, unzuverlässig und egoistisch er ist.
 Trotz dieser Eigenschaften zeigt sich ein vorhandenes schlechtes Gewissen an seiner Rückkehr.
 \autocite{wiki:Faust_Studyflix}
 \autocite{wiki:Faust_Studysmarter}
@@ -214,29 +214,29 @@ Seine dann neu veröffentlichten Ergebnisse gefallen der Kirche aber immer noch 
 Diese will ihre Macht sogar so sehr erhalten, dass sie ihn einsperren und foltern lassen wollen, woraufhin er seine Forschungen widerruft.
 Er forscht weiterhin heimlich und setzt damit sein Leben aufs Spiel.
 Am Ende bekennt er sich zu seinen menschlichen Schwächen, also der Angst vor der Folter und seine Vorliebe für Genüsse, was man an seinen letzten Sätzen \enquote{Ich muß jetzt essen. Ich esse immer noch gern.} sieht.
-Auch diese Zusammenfassung ist im Sinne der Darstellung des Charakters Galilei gekürzt.
+Auch diese Zusammenfassung ist zur Darstellung des Charakters Galilei gekürzt.
 \autocite{wiki:Galilei_Studyflix}
 \autocite{wiki:Leben_des_Galilei}
 \section{Galileis Eigenschaften im Werk}
 	\label{sec:galileis eigenschaften im werk}
 Im Werk \enquote{Leben des Galilei} ist Galileo Galilei ein italienischer Wissenschaftler, welcher eine Tochter hat.
-Er ist außerdem Lehrer, aber dies nur aus Geldmangel, da das Wissenschaftlerdasein, welches er präferiert nicht genug Geld einbringt.
+Er ist außerdem Lehrer, aber dies nur aus Geldmangel, da das Wissenschaftlerdasein, welches er präferiert, nicht genug Geld einbringt.
 Seine Hingabe zum Essen und Genießen zeigt außerdem, dass er ein Genießer ist.
 Seine innovative und kluge Natur erkennt man vor allem an der Erfindung bzw. Weiterentwicklung des Fernrohrs.
 Er ist außerdem ein überzeugender und taktischer Mensch.
 Obwohl er sowohl der Wissenschaft, als auch der Kirche anhängt, präferiert er die Wissenschaft, was man daran sieht, dass er sich gegen die Kirche stellt. 
-Hier findet auch eine merkliche Veränderung statt, als er realisiert, dass er sich gegen die Kirche stellen muss um der Wissenschaft vollständig zu dienen, was eine Charakterentwicklung hervorruft.
+Hier findet auch eine merkliche Veränderung statt, als er realisiert, dass er sich gegen die Kirche stellen muss, um der Wissenschaft vollständig zu dienen, was eine Charakterentwicklung hervorruft.
 Eigentlich handelt er in gutem Gewissen, denn er will der Kirche mit seinen Forschungen helfen.
-Dass diese von der Kirche abgelehnt werden zerstört ihn innerlich, allerdings setzt er im Verlaufe des Werkes auch sein Leben aufs Spiel um seine Forschungen durchzusetzen, unabhängig davon, ob dies tatsächlich funktioniert oder nicht.
+Dass diese von der Kirche abgelehnt werden, zerstört ihn innerlich, allerdings setzt er im Verlaufe des Werkes auch sein Leben aufs Spiel, um seine Forschungen durchzusetzen, unabhängig davon, ob dies tatsächlich funktioniert oder nicht.
 Seine Liebe zur Wissenschaft hängt auch damit zusammen, dass er extrem neugierig und wissbegierig ist.
-In seinem wissenschaftlichen Eifer wirkt er wie von der Wissenschaft besessen und glaubt stets an einen Sieg der Vernunft, also dass die Gesellschaft seinen Forschungen glauben wird anstatt weiter an das zur Machterhaltung der Kirche dienende Weltbild zu glauben.
-Dies passiert zu seinen Lebzeiten nicht, wodurch man merkt wie falsch seine politischen Prognosen verglichen mit seinem genauen und misstrauischen Vorgehen in der Wissenschaft sind.
+In seinem wissenschaftlichen Eifer wirkt er wie von der Wissenschaft besessen und glaubt stets an einen Sieg der Vernunft, also dass die Gesellschaft seinen Forschungen glauben wird, anstatt weiter an das zur Machterhaltung der Kirche dienende Weltbild zu glauben.
+Dies passiert zu seinen Lebzeiten nicht, wodurch man merkt, wie falsch seine politischen Prognosen verglichen mit seinem genauen und misstrauischen Vorgehen in der Wissenschaft sind.
 Im Verlaufe des Werkes erblindet er, was hervorruft, dass man zwei gegenläufige Prozesse hat. 
 Zum einen sieht er tatsächlich weniger, zum anderen erkennt er immer mehr Zusammenhänge.
 Er schätzt fast ausschließlich andere Wissenschaftsinteressierte, aber nur falls sie nicht aus Angst vor der Kirche schweigen.
 Dadurch vernachlässigt er auch seine eigene Tochter.
 Ihm liegt außerdem viel am Allgemeinwohl, denn er forscht für dieses und verfasst seine Ergebnisse sogar nicht in Latein, um sie für die Allgemeinheit verständlich zu machen.
-Gegen Ende des Stücks findet eine weitere Charakterentwicklung statt, bei welcher er beginnt Reue zu spüren.
+Gegen Ende des Stücks findet eine weitere Charakterentwicklung statt, bei welcher er beginnt, Reue zu spüren.
 Er bereut es sehr, seine Forschungen zugunsten der Kirche widerrufen zu haben.
 \autocite{wiki:Leben_des_Galilei}
 \autocite{wiki:Leben_des_Galilei_Charakterisierungen}
@@ -309,17 +309,17 @@ Er bereut es sehr, seine Forschungen zugunsten der Kirche widerrufen zu haben.
 \section{Schlussfolgerung}
 	\label{sec:schlussfolgerung}
 Wie man an den Gemeinsamkeiten erkennen kann, sind Wissenschaftler in literarischen Werken meist kluge Menschen, für welche der unstillbare Drang nach Wissenserlangung ihr Leben bestimmt und für die die Wissenschaft über allem steht.
-Sie sind häufig gegen ihren Willen Lehrer und würden alles aufs Spiel setzen um mehr Wissen zu erlangen.
-Im Verlaufe des Stückes wird gezeigt wie sie immer mehr Zusammenhänge erkennen, unter anderem aufgrund von ihrem Ehrgeiz.
-Dass sie die Wissenschaft über die Kirche bzw. Religion stellen ist für die Zeit in der diese Werke entstanden auch etwas, was sehr wenige Menschen ausmachte und somit zu den prägnanten Merkmalen gehört.
-Negative Aspekte an ihnen sind hier wie feige und verantwortungslos sie sind, gerade in Hinsicht auf ihre Reaktionen auf Probleme.
+Sie sind häufig gegen ihren Willen Lehrer und würden alles aufs Spiel setzen, um mehr Wissen zu erlangen.
+Im Verlaufe des Stückes wird gezeigt, wie sie immer mehr Zusammenhänge erkennen, unter anderem aufgrund ihres Ehrgeizes.
+Dass sie die Wissenschaft über die Kirche bzw. Religion stellen, ist für die Zeit, in der diese Werke entstanden, auch etwas, was sehr wenige Menschen ausmachte und somit zu den prägnanten Merkmalen gehört.
+Negative Aspekte an ihnen sind hier, wie feige und verantwortungslos sie sind, gerade in Hinsicht auf ihre Reaktionen auf Probleme.
 
 \chapter{Zusammenfassung}
 	\label{chap:zusammenfassung}
 Sind Wissenschaftler in der deutschen Literatur das, was wir als verrückte Wissenschaftler kennen?
 Im Gegensatz zu den Verrückten Wissenschaftlern in aktueller Zeit sind Faust und Galilei die Protagonisten und nicht die Antagonisten, obwohl sie trotzdem gegen den Trend der aktuellen Gesellschaft gehen und somit eher weniger als Charakter beliebt sind.
 Der Hang zu bösen Taten fehlt auch, da das Erlangen von Wissen oder das Forschen nicht aus Gründen der Machterweiterung oder purem Spaß an Boshaftigkeit passieren.
-Hier fällt trotzdem die Gemeinsamkeit des Egoismus auf, gerade verglichen zu Faust, der einige Verluste anderer Menschen in Kauf nimmt um sein Wissen zu erweitern.
+Hier fällt trotzdem die Gemeinsamkeit des Egoismus auf, gerade verglichen zu Faust, der einige Verluste anderer Menschen in Kauf nimmt, um sein Wissen zu erweitern.
 Die typischen Verhaltensmuster eines Verrückten Wissenschaftlers findet man allerdings nicht wieder, gerade durch den Mangel an Spaß an dem bloßen \enquote{Böse-sein}.
 Die hieraus zu ziehende Schlussfolgerung ist, dass die Gemeinsamkeiten auf einen Zusammenhang schließen lassen, auch wenn der Wissenschaftler und der Verrückte Wissenschaftler trotzdem zwei verschiedene literarische Figuren sind.
 
