--- a/gfs-marschall/ling-relativ-prinzip.tex
+++ b/gfs-marschall/ling-relativ-prinzip.tex
@@ -206,7 +206,7 @@ Trotz dieser Eigenschaften zeigt sich ein vorhandenes schlechtes Gewissen an sei
 	\label{chap:galilei als wissenschaftler}
 \section{Das Werk \enquote{Leben des Galilei}}
 	\label{sec:das werk leben des galilei}
-Brecht unterrichtet, ist Lehrer und Wissenschaftler, verdient aber nicht genug Geld.
+Galilei unterrichtet, ist Lehrer und Wissenschaftler, verdient aber nicht genug Geld.
 Sein persönlicher Durchbruch ist die Erfindung eines sehr starken und effektiven Fernrohrs, was ihn zum Beweis dessen bringt, dass die Sonne im Mittelpunkt des Universums steht.
 Die Kirche akzeptiert dies allerdings nicht, da sie ihre Macht erhalten will, sodass er trotz seiner Gläubigkeit gegen die Kirche kämpft, da ihm die Wissenschaft wichtiger ist.
 Erst hält er seine Forschung für 8 Jahre geheim, bei der Ernennung eines neuen wissenschaftsinteressierteren Papstes sieht er allerdings seine Chance.
